Thu Nov 23 02:09:09 2000  Alexandre Oliva  <aoliva@redhat.com>

	* config/sh/sh.h (FIRST_GENERAL_REG, LAST_GENERAL_REG): New.
	Moved most register-number #defines...
	* config/sh/sh.md (define_constants): ... here.  Use macros to
	refer to registers and unspecs.
	* config/sh/sh.c: Likewise.

Thu Nov 23 01:01:32 2000  J"orn Rennecke <amylaar@redhat.com>

	* Makefile.in (HOST_CFLAGS): Add -DGENERATOR_FILE.
	(rtl.o, print-rtl.o, bitmap.o, obstack.o): Build with -DGENERATOR_FILE.
	(alloca.o, vfprintf.o, ggc-none.o, errors.o): Likewise.
	(splay-tree.o, hash.o): Likewise.
	GCONFIG_H: New.
	(rtl.o, print-rtl.o): Depend on $(GCONFIG_H) instead of $(CONFIG_H).
	(bitmap.o, obstack.o, vfprintf.o, ggc-none.o, errors.o): Likewise.
	(hashtab.o): Likewise.
	(gcov.o): Depend on $(CONFIG_H).
	* configure.in: #include insn-codes.h in tm.h.

2000-11-22  Nick Clifton  <nickc@redhat.com>

	* config/arm/arm.c (arm_encode_call_attribute): Make 'newstr' a
	const char * to avoid a compile time warning.

	* config/arm/arm.md (define_constants): Define symbolic names for
	the link register, last integer register and the fake CC register.
	Update patterns to use these symbolic names.

2000-11-22  Neil Booth  <neilb@earthling.net>

	* cpplex.c (trigraph_ok): Ensure we don't warn twice.
	* cpplib.h (struct cpp_buffer): New member last_Wtrigraphs.
	
2000-11-22  Richard Henderson  <rth@redhat.com>

	* haifa-sched.c (sched_analyze_1): Don't special-case calls
	for clobbering registers.
	(sched_analyze_2): Likewise.
	(sched_analyze): Zap reg_last_uses and reg_last_sets after calls.

2000-11-22  Chris Demetriou  <cgd@sibyte.com>  
	    Neil Booth  <neilb@earthling.net>

	* gcc.c (validate_switches): Validate multiple switches named
	in '|' (or) expressions in specs.  
	(handle_braces): If more than 1 alternative in a '|' spec
	matches, call do_spec1 just once.

2000-11-22  Michael Meissner  <meissner@redhat.com>

	* d30v.h (TARGET_SWITCHES): Add documentation strings.
	(TARGET_OPTIONS): Ditto.